--- a/www/js/aplanaHhPhone/views/vacationDetail.html
+++ b/www/js/aplanaHhPhone/views/vacationDetail.html
@@ -7,7 +7,7 @@
 				class="backButton">${nls.back}</button>
 		${nls.title}
 	</div>
-	<div data-dojo-type="dojox/mobile/ScrollableView">
+	<div data-dojo-type="dojox/mobile/ScrollableView" data-dojo-attach-point="scrollableView">
 		<form data-dojo-type="dijit/form/Form" id="vacationDetailForm">
 			<input type="hidden" name="vacationList.version" data-dojo-attach-point="version" value="" />
 			<table id="vacationDetail-messages">
@@ -22,7 +22,7 @@
 			<div data-dojo-type="dojox/mobile/RoundRect">
 				<div data-dojo-type="dojox/mobile/FormLayout"
 					 data-dojo-attach-point="formLayoutCommon">
-					<div>
+					<div data-dojo-attach-point="divId">
 						<label for="id">${nls.id}</label>
 						<fieldset>
 							<input data-dojo-type="dojox/mobile/TextArea"
