back button without arrow

--- a/www/js/aplanaHhPhone/views/menu.html
+++ b/www/js/aplanaHhPhone/views/menu.html
@@ -3,7 +3,7 @@
 		 data-dojo-props="fixed: 'top'">
 		<button data-dojo-type="dojox/mobile/ToolBarButton"
 				data-dojo-attach-point="logoff"
-				data-dojo-props="arrow: 'left'"
+				data-dojo-props="arrow: 'left2'"
 				style="position: absolute; left: 0"
 				class="backButton">${nls.logoff}</button>
 	</div>
