--- a/www/js/aplanaHhPhone/views/refUserDetail.html
+++ b/www/js/aplanaHhPhone/views/refUserDetail.html
@@ -2,7 +2,7 @@
 	<div data-dojo-type="dojox/mobile/Heading" data-dojo-props="fixed: 'top'">
 		<button data-dojo-type="dojox/mobile/ToolBarButton"
 				data-dojo-attach-point="backButton"
-				data-dojo-props="arrow: 'left', target: 'refUsers'"
+				data-dojo-props="arrow: 'left2', target: 'refUsers'"
 				style="position: absolute; left: 0"
 				class="backButton">${nls.back}</button>
 		${nls.title}
