--- a/www/js/aplanaHhPhone/views/sickMenu.html
+++ b/www/js/aplanaHhPhone/views/sickMenu.html
@@ -3,7 +3,7 @@
 		 data-dojo-props="fixed: 'top'">
 		<button data-dojo-type="dojox/mobile/ToolBarButton"
 				data-dojo-attach-point="refUsersBackButton"
-				data-dojo-props="arrow: 'left', target: 'menu', transitionDir: -1, moveTo: 'menu'"
+				data-dojo-props="arrow: 'left2', target: 'menu', transitionDir: -1, moveTo: 'menu'"
 				style="position: absolute; left: 0"
 				class="backButton">${nls.back}</button>
 	</div>
