--- a/www/js/aplanaHhPhone/views/vacationMenu.html
+++ b/www/js/aplanaHhPhone/views/vacationMenu.html
@@ -1,10 +1,15 @@
 <div class="mblBackground">
 	<div data-dojo-type="dojox/mobile/Heading"
-		 data-dojo-props="fixed: 'top', back: '${nls.back}', href:'#menu', hrefTarget:'#menu'">
+		 data-dojo-props="fixed: 'top'">
+		<button data-dojo-type="dojox/mobile/ToolBarButton"
+				data-dojo-attach-point="backButton"
+				data-dojo-props="arrow: 'left2', target: 'menu'"
+				style="position: absolute; left: 0"
+				class="backButton">${nls.back}</button>
 		 <!-- 
 		<button data-dojo-type="dojox/mobile/ToolBarButton"
 				data-dojo-attach-point="refUsersBackButton"
-				data-dojo-props="arrow: 'left', back: true"
+				data-dojo-props="arrow: 'left2', back: true"
 				style="position: absolute; left: 0"
 				class="backButton">${nls.back}</button>
 		  -->
